--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -68,4 +68,8 @@ jobs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git commit -m "Add changes" -a
-        git push git@github.com:ylx2016/kernel.git master
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
