--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -9,6 +9,8 @@ name: Update elrepo config
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 20 * * *"
     inputs:
       ssh:
         description: 'SSH connection to Actions'
