--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -11,11 +11,11 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 20 * * *"
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+    #inputs:
+    #  ssh:
+    #    description: 'SSH connection to Actions'
+    #    required: false
+    #    default: 'false'
 
 env:
   TZ: Asia/Shanghai
