--- a/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
@@ -10,8 +10,8 @@ name: Centos Kernel latest XANMOD STABLE GCC9
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 21 * * *"
+  #schedule:
+  #  - cron: "0 21 * * *"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
