--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -11,7 +11,7 @@ name: Centos Kernel Latest BBRPLUS
 on:
   workflow_dispatch:
   schedule:
-   - cron: "0 21 * * *"
+   - cron: "39 20 * * 1,4"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
