--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -11,7 +11,7 @@ name: Ubuntu Kernel Latest
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 21 * * *"
+    - cron: "36 20 * * 2,4"
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
