--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -45,8 +45,21 @@ jobs:
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
         
+    - name: Check for updates
+      id: check
+      run: |
+        #action_kernel_ver=$(curl -s https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo | grep "Linux/x86_64" | awk -F '[-]' '{print $1}' | awk -F ' ' '{print $3}')
+        action_kernel_ver=$(grep "Linux/x86_64" /work/kernel/kernel/config_elrepo | awk -F '[-]' '{print $1}' | awk -F ' ' '{print $3}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
+         if [ "$action_kernel_ver" == "$kernel_ver" ];then
+            echo "::set-output name=status::fail"
+        else
+            echo "::set-output name=status::success"
+        fi
+        
     - name: Update config
       id: update
+      if: steps.check.outputs.status == 'success'
       working-directory: /workdir
       run: |
         sudo apt install -y rpm2cpio 
@@ -69,12 +82,14 @@ jobs:
           
     - name: Commit files
       continue-on-error: true
+      if: steps.update.outputs.status == 'success'
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git commit -m "Add changes" -a
     - name: Push changes
       continue-on-error: true
+      if: steps.update.outputs.status == 'success'
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
