--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -9,11 +9,11 @@ name: Update elrepo config
 
 on:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+    #inputs:
+    #  ssh:
+    #    description: 'SSH connection to Actions'
+    #    required: false
+    #    default: 'false'
   schedule:
     - cron: "30 20 * * 1,4"
     
