--- a/.github/workflows/Centos_kernel_latest_bbrplus_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus_C8.yml
@@ -30,8 +30,10 @@ jobs:
     container: docker.io/centos:8
     
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+      with:
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+        fetch-depth: 0
       
     - name: intall deps
       run: |
