--- a/.github/workflows/Centos_kernel_latest_bbrplus_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus_C8.yml
@@ -86,6 +86,7 @@ jobs:
         patch=$(find / -name convert_official_linux-5.10.x_src_to_bbrplus.patch | grep 'convert' | head -n 1)
         cp $patch /workdir/linux-${kernel_ver}/5.10_bbrplus.patch
         patch -p0 < 5.10_bbrplus.patch
+        #/__w/kernel/kernel
         bbrplus_config=$(find / -name config-5.10.27-bbrplus | grep 'bbrplus' | head -n 1)
         cp $bbrplus_config /workdir/linux-${kernel_ver}/.config
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
