--- a/.github/workflows/Centos_kernel_latest_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_C8.yml
@@ -6,7 +6,7 @@
 # Change from P3TERX
 #
 
-name: Centos Kernel Latest BBRPLUS C8
+name: Centos Kernel Latest C8
 
 on:
   workflow_dispatch:
@@ -16,8 +16,7 @@ on:
         required: false
         default: 'false'
   #schedule:
-   #- cron: "39 20 * * 2,4"
-   
+    #- cron: "38 20 * * 1,4"
 
 env:
   UPLOAD_DIR: false
@@ -46,10 +45,10 @@ jobs:
         yum -y install gcc-toolset-10-gcc gcc-toolset-10-gcc-c++ gcc-toolset-10
         mkdir /github/home/.ssh/ && mkdir /workdir
         
-    - name: Check for updates
+    - name: Check for updates  
       id: check
       run: |
-        github_centos_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep '_latest_bbrplus_C8_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}')
+        github_centos_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep '_latest_bbr_C8_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}')
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         if [ "$github_centos_ver" == "$kernel_ver" ];then
             echo "::set-output name=status::fail"
@@ -83,15 +82,11 @@ jobs:
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
-        #patch=$(find / -name convert_official_linux-5.10.x_src_to_bbrplus.patch | grep 'convert' | head -n 1)
-        cp /__w/kernel/kernel/convert_official_linux-5.10.x_src_to_bbrplus.patch /workdir/linux-${kernel_ver}/5.10_bbrplus.patch
-        patch -p0 < 5.10_bbrplus.patch
-        #/__w/kernel/kernel
-        #bbrplus_config=$(find / -name config-5.10.27-bbrplus | grep 'bbrplus' | head -n 1)
-        cp /__w/kernel/kernel/config-5.10.27-bbrplus /workdir/linux-${kernel_ver}/.config
+        #wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
+        cp /__w/kernel/kernel/config_elrepo /workdir/linux-${kernel_ver}/.config
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
-        ln -s /opt/rh/gcc-toolset-10/root/usr/bin/* /usr/local/bin/
+        ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
         sudo time make -j$(nproc) rpm-pkg
         mv /root/rpmbuild/RPMS/* /workdir/upload
         echo "::set-output name=status::success"
@@ -113,10 +108,9 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo "::set-output name=release_tag::Centos_Kernel_${kernel_ver}_latest_bbrplus_C8_$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::Centos_Kernel_${kernel_ver}_latest_bbr_C8_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "only for Cloud VMs" >> release.txt
-        echo "for centos 8" >> release.txt
+        echo "for centos 7" >> release.txt
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
@@ -128,3 +122,9 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: /workdir/upload/*
+
+    #- name: Delete workflow runs
+    #  uses: GitRML/delete-workflow-runs@main
+    #  with:
+    #    retain_days: 1
+    #    keep_minimum_runs: 3
