--- a/.github/workflows/Centos_kernel_latest_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_C8.yml
@@ -84,7 +84,7 @@ jobs:
         cd linux-$kernel_ver
         #wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         #cp /__w/kernel/kernel/config_elrepo /workdir/linux-${kernel_ver}/.config
-        make ARCH=amd64 oldconfig
+        make oldconfig
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
