--- a/.github/workflows/Centos_kernel_latest_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_C8.yml
@@ -84,7 +84,7 @@ jobs:
         cd linux-$kernel_ver
         #wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         #cp /__w/kernel/kernel/config_elrepo /workdir/linux-${kernel_ver}/.config
-        make oldconfig
+        #make oldconfig
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
@@ -111,7 +111,8 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         echo "::set-output name=release_tag::Centos_Kernel_${kernel_ver}_latest_bbr_C8_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "for centos 7" >> release.txt
+        echo "for centos 8" >> release.txt
+        echo "test file" >> release.txt
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
