--- a/.github/workflows/Centos_kernel_latest_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_C8.yml
@@ -84,6 +84,7 @@ jobs:
         cd linux-$kernel_ver
         #wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         #cp /__w/kernel/kernel/config_elrepo /workdir/linux-${kernel_ver}/.config
+        cp /__w/kernel/kernel/c8.config /workdir/linux-${kernel_ver}/.config
         #make oldconfig
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
