--- a/.github/workflows/Centos_kernel_latest_xanmod_cacule_gcc9_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_cacule_gcc9_C8.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Check for updates
       id: check
       run: |
-        github_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep 'xanmod1-cacule_latest_C8_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}' | awk -F '[-]' '{print $1}')
+        github_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep 'xanmod1-cacule_C8_latest_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}' | awk -F '[-]' '{print $1}')
         kernel_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         if [ "$github_ver" == "$kernel_ver" ];then
             echo "::set-output name=status::fail"
@@ -113,8 +113,7 @@ jobs:
         xanmod_cacule=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
         #xanmod_cacule=5.10.25-xanmod2
         #xanmod_cacule_ver=5.10.25
-        echo "::set-output name=release_tag::Centos_Kernel_${xanmod_cacule}_latest_C8_$(date +"%Y.%m.%d-%H%M")"
-        #echo "::set-output name=release_tag::Centos_Kernel_${xanmod_cacule}_C8_$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::Centos_Kernel_${xanmod_cacule}_C8_latest_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "for centos 8" >> release.txt
         echo "test file" >> release.txt
