--- a/.github/workflows/Centos_kernel_latest_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_C8.yml
@@ -15,8 +15,8 @@ on:
    #     description: 'SSH connection to Actions'
    #     required: false
    #     default: 'false'
-  schedule:
-    - cron: "38 20 * * 2,6"
+  #schedule:
+  #  - cron: "38 20 * * 2,6"
 
 env:
   UPLOAD_DIR: false
