--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -11,7 +11,8 @@ name: Ubuntu Kernel Latest
 on:
   workflow_dispatch:
   schedule:
-    - cron: "36 20 * * 2,6"
+    #- cron: "36 20 * * 2,6"
+    - cron: "36 20 * * *"
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
