--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -11,7 +11,8 @@ name: Centos Kernel Latest
 on:
   workflow_dispatch:
   schedule:
-    - cron: "38 20 * * 1,4"
+    #- cron: "38 20 * * 1,4"
+    - cron: "39 20 * * *"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
