--- a/.github/workflows/Ubuntu_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_latest_bbrplus.yml
@@ -128,11 +128,11 @@ jobs:
         body_path: release.txt
         files: /workdir/upload/*
 
-    #- name: Delete workflow runs
-    #  uses: GitRML/delete-workflow-runs@main
-    #  with:
-    #    retain_days: 1
-    #    keep_minimum_runs: 30
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 1
+        keep_minimum_runs: 5
 
     #- name: Remove old Releases
     #  uses: dev-drprasad/delete-older-releases@v0.1.0
