--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -49,7 +49,8 @@ jobs:
       id: check
       run: |
         #action_kernel_ver=$(curl -s https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo | grep "Linux/x86_64" | awk -F '[-]' '{print $1}' | awk -F ' ' '{print $3}')
-        config=$(find / -name config_elrepo | grep 'elrepo' | head -n 1)
+        #config=$(find / -name config_elrepo | grep 'elrepo' | head -n 1)
+        config=/home/runner/work/kernel/kernel/config_elrepo
         action_kernel_ver=$(grep "Linux/x86_64" ${config} | awk -F '[-]' '{print $1}' | awk -F ' ' '{print $3}')
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
          if [ "$action_kernel_ver" == "$kernel_ver" ];then
