--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -74,7 +74,7 @@ jobs:
         sudo patch -p1 < ${elrepo_patch} config-*-1.el7.elrepo.x86_64
         sudo rm -rf ${config}
         sudo mv config-*-1.el7.elrepo.x86_64 ${config}
-        cat ${config}
+        #cat ${config}
         echo "::set-output name=status::success"
         
     - name: SSH connection to Actions
