--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -70,7 +70,8 @@ jobs:
         sudo rpm2cpio kernel-ml-$elrepo_c7_ver-1.el7.elrepo.x86_64.rpm | cpio -divm
         cd /workdir/boot
         elrepo_patch=$(find / -name elrepo_config.patch | grep 'elrepo' | head -n 1)
-        config=$(find / -name config_elrepo | grep 'elrepo' | head -n 1)
+        #config=$(find / -name config_elrepo | grep 'elrepo' | head -n 1)
+        config=/home/runner/work/kernel/kernel/config_elrepo
         sudo patch -p1 < ${elrepo_patch} config-*-1.el7.elrepo.x86_64
         sudo rm -rf ${config}
         sudo mv config-*-1.el7.elrepo.x86_64 ${config}
